// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Dialog/DialogHeader Title only: Components/Dialog/DialogHeader Title only 1`] = `
.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c7 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 24px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  white-space: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3.c3 > *:nth-child(n + 2) {
  margin-left: -10px;
}

.c8.c8 .c5,
.c8.c8 .c5 svg {
  font-size: 20px;
}

.c8.c8:hover .c5 {
  color: rgba(158,158,158,0.88);
}

.c8.c8:active .c5 {
  color: #9e9e9e;
}

.c8.c8.c8.c8.disabled .c5 {
  color: rgba(0,0,0,0.12);
}

.c4.c4 {
  padding: 0;
  width: 40px;
  height: 40px;
  color: #9e9e9e;
  opacity: 1;
  padding: 0;
  background-color: inherit;
}

.c4.c4 .c5,
.c4.c4 .c5 svg {
  font-size: 20px;
}

.c4.c4:hover {
  background-color: rgba(158,158,158,0.12);
}

.c4.c4:hover .c5 {
  color: rgba(158,158,158,0.88);
}

.c4.c4:active .c5 {
  color: #9e9e9e;
}

.c4.c4.c4.c4.disabled .c5 {
  color: rgba(0,0,0,0.12);
}

.c4.c4 .rippleVisible {
  color: #9e9e9e;
  opacity: 0.24;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: cBKRfH;
  animation-name: cBKRfH;
}

.c9.c9 .c5,
.c9.c9 .c5 svg {
  font-size: 20px;
}

.c9.c9:hover .c5 {
  color: rgba(6,132,189,0.88);
}

.c9.c9:active .c5 {
  color: #0684bd;
}

.c9.c9.c9.c9.disabled .c5 {
  color: rgba(0,0,0,0.12);
}

.c10.c10 .c5,
.c10.c10 .c5 svg {
  font-size: 20px;
}

.c10.c10:hover .c5 {
  color: rgba(6,132,189,0.88);
}

.c10.c10:active .c5 {
  color: #0684bd;
}

.c10.c10.c10.c10.disabled .c5 {
  color: rgba(0,0,0,0.12);
}

.c0 {
  background-color: white;
  padding: 0px 24px;
  height: 52px;
  min-height: 52px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1.c1 {
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.c1.c1 h2 {
  color: #212121;
  text-align: left;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
  font-size: 1.25rem;
  font-weight: 500;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 24px;
}

.c1.c1.vertical h2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 560px;
  margin: 0 auto;
}

.c2 {
  margin-left: 16px;
  margin-right: -10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c2.c2 > * {
  margin-left: -10px;
}

.c2.c2 > *:first-child {
  margin-left: 0;
}

<div
  style={
    Object {
      "margin": "10px auto",
      "width": "640px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="MuiDialogTitle-root c1"
    >
      <h6
        className="MuiTypography-root MuiTypography-h6"
      >
        Title
        <div />
      </h6>
    </div>
    <div
      className="c2"
    >
      <div
        className="c3"
        direction="horizontal"
        onClick={[Function]}
      >
        <button
          aria-describedby={null}
          className="MuiButtonBase-root MuiIconButton-root c4"
          disabled={false}
          onBlur={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          size="medium"
          tabIndex="0"
          title={null}
          type="button"
          variant="round"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="c5  icon c6"
              size="medium"
            >
              <svg
                className="c7"
                role="img"
              >
                <use
                  href="#undefined"
                  xlinkHref="#undefined"
                />
              </svg>
            </span>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Dialog/DialogHeader Title with action icons: Components/Dialog/DialogHeader Title with action icons 1`] = `
.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c7 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 24px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  white-space: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3.c3 > *:nth-child(n + 2) {
  margin-left: -10px;
}

.c10.c10 .c5,
.c10.c10 .c5 svg {
  font-size: 20px;
}

.c10.c10:hover .c5 {
  color: rgba(158,158,158,0.88);
}

.c10.c10:active .c5 {
  color: #9e9e9e;
}

.c10.c10.c10.c10.disabled .c5 {
  color: rgba(0,0,0,0.12);
}

.c8.c8 {
  padding: 0;
  width: 40px;
  height: 40px;
  color: #9e9e9e;
  opacity: 1;
  padding: 0;
  background-color: inherit;
}

.c8.c8 .c5,
.c8.c8 .c5 svg {
  font-size: 20px;
}

.c8.c8:hover {
  background-color: rgba(158,158,158,0.12);
}

.c8.c8:hover .c5 {
  color: rgba(158,158,158,0.88);
}

.c8.c8:active .c5 {
  color: #9e9e9e;
}

.c8.c8.c8.c8.disabled .c5 {
  color: rgba(0,0,0,0.12);
}

.c8.c8 .rippleVisible {
  color: #9e9e9e;
  opacity: 0.24;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: cBKRfH;
  animation-name: cBKRfH;
}

.c11.c11 .c5,
.c11.c11 .c5 svg {
  font-size: 20px;
}

.c11.c11:hover .c5 {
  color: rgba(6,132,189,0.88);
}

.c11.c11:active .c5 {
  color: #0684bd;
}

.c11.c11.c11.c11.disabled .c5 {
  color: rgba(0,0,0,0.12);
}

.c12.c12 .c5,
.c12.c12 .c5 svg {
  font-size: 20px;
}

.c12.c12:hover .c5 {
  color: rgba(6,132,189,0.88);
}

.c12.c12:active .c5 {
  color: #0684bd;
}

.c12.c12.c12.c12.disabled .c5 {
  color: rgba(0,0,0,0.12);
}

.c4.c4 {
  padding: 0;
  width: 40px;
  height: 40px;
  color: #edb63c;
  opacity: 1;
  padding: 0;
  background-color: inherit;
}

.c4.c4 .c5,
.c4.c4 .c5 svg {
  font-size: 20px;
}

.c4.c4:hover {
  background-color: rgba(237,182,60,0.12);
}

.c4.c4:hover .c5 {
  color: rgba(237,182,60,0.88);
}

.c4.c4:active .c5 {
  color: #edb63c;
}

.c4.c4.c4.c4.disabled .c5 {
  color: rgba(0,0,0,0.12);
}

.c4.c4 .rippleVisible {
  color: #edb63c;
  opacity: 0.24;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: cBKRfH;
  animation-name: cBKRfH;
}

.c0 {
  background-color: white;
  padding: 0px 24px;
  height: 52px;
  min-height: 52px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1.c1 {
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.c1.c1 h2 {
  color: #212121;
  text-align: left;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
  font-size: 1.25rem;
  font-weight: 500;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 24px;
}

.c1.c1.vertical h2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 560px;
  margin: 0 auto;
}

.c2 {
  margin-left: 16px;
  margin-right: -10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c2.c2 > * {
  margin-left: -10px;
}

.c2.c2 > *:first-child {
  margin-left: 0;
}

.c9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 100%;
}

<div
  style={
    Object {
      "margin": "10px auto",
      "width": "640px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="MuiDialogTitle-root c1"
    >
      <h6
        className="MuiTypography-root MuiTypography-h6"
      >
        Title
        <div />
      </h6>
    </div>
    <div
      className="c2"
    >
      <div
        className="c3"
        direction="horizontal"
        onClick={[Function]}
      >
        <button
          aria-describedby={null}
          className="MuiButtonBase-root MuiIconButton-root c4"
          disabled={false}
          onBlur={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          size="medium"
          tabIndex="0"
          title={null}
          type="button"
          variant="round"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="c5  icon c6"
              size="medium"
            >
              <svg
                className="c7"
                role="img"
              >
                <use
                  href="#undefined"
                  xlinkHref="#undefined"
                />
              </svg>
            </span>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
        <button
          aria-describedby={null}
          className="MuiButtonBase-root MuiIconButton-root c8"
          disabled={false}
          onBlur={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          size="medium"
          tabIndex="0"
          title={null}
          type="button"
          variant="round"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="c5  icon c6"
              size="medium"
            >
              <svg
                className="c7"
                role="img"
              >
                <use
                  href="#undefined"
                  xlinkHref="#undefined"
                />
              </svg>
            </span>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
        <div>
          <div
            className="c9"
            onClick={[Function]}
            onMouseDown={[Function]}
          >
            <button
              aria-describedby={null}
              className="MuiButtonBase-root MuiIconButton-root c8"
              disabled={false}
              onBlur={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              size="medium"
              tabIndex="0"
              title={null}
              type="button"
              variant="round"
            >
              <span
                className="MuiIconButton-label"
              >
                <span
                  className="c5  icon c6"
                  size="medium"
                >
                  <svg
                    className="c7"
                    role="img"
                  >
                    <use
                      href="#undefined"
                      xlinkHref="#undefined"
                    />
                  </svg>
                </span>
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <button
          aria-describedby={null}
          className="MuiButtonBase-root MuiIconButton-root c8"
          disabled={false}
          onBlur={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          size="medium"
          tabIndex="0"
          title={null}
          type="button"
          variant="round"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="c5  icon c6"
              size="medium"
            >
              <svg
                className="c7"
                role="img"
              >
                <use
                  href="#undefined"
                  xlinkHref="#undefined"
                />
              </svg>
            </span>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Dialog/DialogHeader Title with avatar and information: Components/Dialog/DialogHeader Title with avatar and information 1`] = `
.c2.c2 {
  width: 32px;
  height: 32px;
  font-size: 1rem;
  font-weight: 500;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 22px;
  background-color: #6FAFEB;
}

.c2.c2:hover {
  opacity: 0.88;
  cursor: pointer;
}

.c2.c2:active {
  opacity: 0.76;
}

.c2 > .avatar-short-name {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c12 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 24px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  white-space: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8.c8 > *:nth-child(n + 2) {
  margin-left: -10px;
}

.c15.c15 .c10,
.c15.c15 .c10 svg {
  font-size: 20px;
}

.c15.c15:hover .c10 {
  color: rgba(158,158,158,0.88);
}

.c15.c15:active .c10 {
  color: #9e9e9e;
}

.c15.c15.c15.c15.disabled .c10 {
  color: rgba(0,0,0,0.12);
}

.c13.c13 {
  padding: 0;
  width: 40px;
  height: 40px;
  color: #9e9e9e;
  opacity: 1;
  padding: 0;
  background-color: inherit;
}

.c13.c13 .c10,
.c13.c13 .c10 svg {
  font-size: 20px;
}

.c13.c13:hover {
  background-color: rgba(158,158,158,0.12);
}

.c13.c13:hover .c10 {
  color: rgba(158,158,158,0.88);
}

.c13.c13:active .c10 {
  color: #9e9e9e;
}

.c13.c13.c13.c13.disabled .c10 {
  color: rgba(0,0,0,0.12);
}

.c13.c13 .rippleVisible {
  color: #9e9e9e;
  opacity: 0.24;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: cBKRfH;
  animation-name: cBKRfH;
}

.c16.c16 .c10,
.c16.c16 .c10 svg {
  font-size: 20px;
}

.c16.c16:hover .c10 {
  color: rgba(6,132,189,0.88);
}

.c16.c16:active .c10 {
  color: #0684bd;
}

.c16.c16.c16.c16.disabled .c10 {
  color: rgba(0,0,0,0.12);
}

.c17.c17 .c10,
.c17.c17 .c10 svg {
  font-size: 20px;
}

.c17.c17:hover .c10 {
  color: rgba(6,132,189,0.88);
}

.c17.c17:active .c10 {
  color: #0684bd;
}

.c17.c17.c17.c17.disabled .c10 {
  color: rgba(0,0,0,0.12);
}

.c9.c9 {
  padding: 0;
  width: 40px;
  height: 40px;
  color: #edb63c;
  opacity: 1;
  padding: 0;
  background-color: inherit;
}

.c9.c9 .c10,
.c9.c9 .c10 svg {
  font-size: 20px;
}

.c9.c9:hover {
  background-color: rgba(237,182,60,0.12);
}

.c9.c9:hover .c10 {
  color: rgba(237,182,60,0.88);
}

.c9.c9:active .c10 {
  color: #edb63c;
}

.c9.c9.c9.c9.disabled .c10 {
  color: rgba(0,0,0,0.12);
}

.c9.c9 .rippleVisible {
  color: #edb63c;
  opacity: 0.24;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: cBKRfH;
  animation-name: cBKRfH;
}

.c0 {
  background-color: white;
  padding: 0px 24px;
  height: 52px;
  min-height: 52px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6.c6 {
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.c6.c6 h2 {
  color: #212121;
  text-align: center;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
  font-size: 1rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 22px;
}

.c6.c6.vertical h2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 560px;
  margin: 0 auto;
}

.c7 {
  margin-left: 16px;
  margin-right: -10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c7.c7 > * {
  margin-left: -10px;
}

.c7.c7 > *:first-child {
  margin-left: 0;
}

.c14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 16px;
  width: 200px;
}

.c4 {
  font-size: 0.875rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 20px;
  color: #212121;
  margin: 0;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
}

.c5 {
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  color: #9e9e9e;
  margin: 0;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
}

.c3 {
  margin-left: 8px;
  max-width: 160px;
}

@media screen and (max-width:640px) {
  .c1 {
    width: auto;
  }
}

@media screen and (max-width:640px) {
  .c3 {
    display: none;
  }
}

<div
  style={
    Object {
      "margin": "10px auto",
      "width": "640px",
    }
  }
>
  <h4>
    One line: 
  </h4>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className=""
      >
        <div
          className="MuiAvatar-root MuiAvatar-colorDefault c2"
          color="lake"
          size="medium"
        >
          SH
        </div>
      </div>
      <div
        className="c3"
      >
        <h3
          className="c4"
        >
          Jessica Lewis
        </h3>
        <h4
          className="c5"
        >
          1/23/2019 10:02 AM
        </h4>
      </div>
    </div>
    <div
      className="MuiDialogTitle-root c6"
    >
      <h6
        className="MuiTypography-root MuiTypography-h6"
      >
        Bulldog friendship.jpegdddddddddddddddddddd
         
        (1 / 20)
        <div />
      </h6>
    </div>
    <div
      className="c7"
    >
      <div
        className="c8"
        direction="horizontal"
        onClick={[Function]}
      >
        <button
          aria-describedby={null}
          className="MuiButtonBase-root MuiIconButton-root c9"
          disabled={false}
          onBlur={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          size="medium"
          tabIndex="0"
          title={null}
          type="button"
          variant="round"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="c10  icon c11"
              size="medium"
            >
              <svg
                className="c12"
                role="img"
              >
                <use
                  href="#undefined"
                  xlinkHref="#undefined"
                />
              </svg>
            </span>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
        <button
          aria-describedby={null}
          className="MuiButtonBase-root MuiIconButton-root c13"
          disabled={false}
          onBlur={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          size="medium"
          tabIndex="0"
          title={null}
          type="button"
          variant="round"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="c10  icon c11"
              size="medium"
            >
              <svg
                className="c12"
                role="img"
              >
                <use
                  href="#undefined"
                  xlinkHref="#undefined"
                />
              </svg>
            </span>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
        <div>
          <div
            className="c14"
            onClick={[Function]}
            onMouseDown={[Function]}
          >
            <button
              aria-describedby={null}
              className="MuiButtonBase-root MuiIconButton-root c13"
              disabled={false}
              onBlur={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              size="medium"
              tabIndex="0"
              title={null}
              type="button"
              variant="round"
            >
              <span
                className="MuiIconButton-label"
              >
                <span
                  className="c10  icon c11"
                  size="medium"
                >
                  <svg
                    className="c12"
                    role="img"
                  >
                    <use
                      href="#undefined"
                      xlinkHref="#undefined"
                    />
                  </svg>
                </span>
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <button
          aria-describedby={null}
          className="MuiButtonBase-root MuiIconButton-root c13"
          disabled={false}
          onBlur={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          size="medium"
          tabIndex="0"
          title={null}
          type="button"
          variant="round"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="c10  icon c11"
              size="medium"
            >
              <svg
                className="c12"
                role="img"
              >
                <use
                  href="#undefined"
                  xlinkHref="#undefined"
                />
              </svg>
            </span>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
  <br />
  <br />
  <h4>
    Break line: 
  </h4>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className=""
      >
        <div
          className="MuiAvatar-root MuiAvatar-colorDefault c2"
          color="lake"
          size="medium"
        >
          SH
        </div>
      </div>
      <div
        className="c3"
      >
        <h3
          className="c4"
        >
          Jessica Lewis
        </h3>
        <h4
          className="c5"
        >
          1/23/2019 10:02 AM
        </h4>
      </div>
    </div>
    <div
      className="MuiDialogTitle-root c6"
    >
      <h6
        className="MuiTypography-root MuiTypography-h6"
      >
        <span>
          Bulldog friendship.jpegdddddddddddddddddddd
        </span>
        <span>
           
          (1 / 20)
        </span>
        <div />
      </h6>
    </div>
    <div
      className="c7"
    >
      <div
        className="c8"
        direction="horizontal"
        onClick={[Function]}
      >
        <button
          aria-describedby={null}
          className="MuiButtonBase-root MuiIconButton-root c9"
          disabled={false}
          onBlur={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          size="medium"
          tabIndex="0"
          title={null}
          type="button"
          variant="round"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="c10  icon c11"
              size="medium"
            >
              <svg
                className="c12"
                role="img"
              >
                <use
                  href="#undefined"
                  xlinkHref="#undefined"
                />
              </svg>
            </span>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
        <button
          aria-describedby={null}
          className="MuiButtonBase-root MuiIconButton-root c13"
          disabled={false}
          onBlur={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          size="medium"
          tabIndex="0"
          title={null}
          type="button"
          variant="round"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="c10  icon c11"
              size="medium"
            >
              <svg
                className="c12"
                role="img"
              >
                <use
                  href="#undefined"
                  xlinkHref="#undefined"
                />
              </svg>
            </span>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
        <div>
          <div
            className="c14"
            onClick={[Function]}
            onMouseDown={[Function]}
          >
            <button
              aria-describedby={null}
              className="MuiButtonBase-root MuiIconButton-root c13"
              disabled={false}
              onBlur={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              size="medium"
              tabIndex="0"
              title={null}
              type="button"
              variant="round"
            >
              <span
                className="MuiIconButton-label"
              >
                <span
                  className="c10  icon c11"
                  size="medium"
                >
                  <svg
                    className="c12"
                    role="img"
                  >
                    <use
                      href="#undefined"
                      xlinkHref="#undefined"
                    />
                  </svg>
                </span>
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <button
          aria-describedby={null}
          className="MuiButtonBase-root MuiIconButton-root c13"
          disabled={false}
          onBlur={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          size="medium"
          tabIndex="0"
          title={null}
          type="button"
          variant="round"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="c10  icon c11"
              size="medium"
            >
              <svg
                className="c12"
                role="img"
              >
                <use
                  href="#undefined"
                  xlinkHref="#undefined"
                />
              </svg>
            </span>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
